--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ on:
 
 
 env:
-  GAME_NAME: breakout-platformer
+  GAME_NAME: drepanoid
   UNITY_VERSION: 2019.3.15f1
   UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
   UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
