--- a/Assets/Scripts/Player/Drepanoid.Main.asmdef
+++ b/Assets/Scripts/Player/Drepanoid.Main.asmdef
@@ -1,3 +1,22 @@
-﻿{
-	"name": "Drepanoid.Main"
+{
+    "name": "Drepanoid.Main",
+    "references": [
+        "GUID:5e1e42ef5b88c4e2092f9609983cb2b7",
+        "GUID:29492541a59d04a81b47a7f225e8a22d",
+        "GUID:14165214884ae4a619bfb290f28194a7",
+        "GUID:b46ca25735456405ca5f0ebae3fd2f52",
+        "GUID:39d90d64ded314c27a72b2586cd86439",
+        "GUID:7cead87e598844809ae298f71540fc18",
+        "GUID:e7e15a8eb685c44439fe73b95ef81946",
+        "GUID:137b5fe5a647f47108d48da1eca43858"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
