--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,17 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
+# Odin inspector
+
+# Ignore the auto-generated AOT compatibility dll.
+/Assets/Plugins/Sirenix/Assemblies/AOT/*
+
+# Ignore all unpacked demos.
+/Assets/Plugins/Sirenix/Demos/*
+
+# But keep the demo packages themselves.
+!/Assets/Plugins/Sirenix/Demos/*.unitypackage 
+
 
 
 # other generally useful files
