--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -23,6 +23,7 @@
     "com.mambojambostudios.unity-atoms-scene-mgmt": "4.1.0",
     "com.mambojambostudios.unity-atoms-tags": "4.1.0",
     "com.mambojambostudios.unity-atoms-ui": "4.1.0",
+    "com.unity.2d.pixel-perfect": "2.0.4",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.4.5",
