--- a/Assets/Scripts/Player/Drepanoid.Main.asmdef
+++ b/Assets/Scripts/Player/Drepanoid.Main.asmdef
@@ -3,6 +3,7 @@
     "references": [
         "GUID:5e1e42ef5b88c4e2092f9609983cb2b7",
         "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:476f7c6c6dfeed041b063446a926e656",
         "GUID:29492541a59d04a81b47a7f225e8a22d",
         "GUID:14165214884ae4a619bfb290f28194a7",
         "GUID:b46ca25735456405ca5f0ebae3fd2f52",
